@@ -501,6 +501,14 @@ int FileStorage_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*
                     if (!node.isNone()) {
                         cvd->houghbuil->read(node);
                     }
+                } else if (strcmp(type, "opencv-lsdetector") == 0) {
+                    if (LineSegmentDetector(cd, interp, 1, &empty) != TCL_OK) {
+                        keepInterpErr = 1;
+                        throw cv::Exception();
+                    }
+                    if (!node.isNone()) {
+                        cvd->lsdetector->read(node);
+                    }
                 } else if (strcmp(type, "opencv-fastfeaturedetector") == 0) {
                     if (FastFeatureDetector(cd, interp, 1, &empty) != TCL_OK) {
                         keepInterpErr = 1;
@@ -1050,6 +1058,7 @@ int FileStorage_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*
                 if (cmd == cvd->cmd_clahe ||
                     cmd == cvd->cmd_houghballard ||
                     cmd == cvd->cmd_houghbuil ||
+                    cmd == cvd->cmd_lsdetector ||
                     cmd == cvd->cmd_fastdetector ||
                     cmd == cvd->cmd_agastdetector ||
                     cmd == cvd->cmd_mserextractor ||
@@ -1175,6 +1184,16 @@ int FileStorage_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*
                         (*fs) << "data" << "{";
                         fs->elname = "data";
                         cvd->houghbuil->write(*fs);
+                        (*fs) << "}";
+                    }
+                    (*fs) << "}";
+                } else if (cmd == cvd->cmd_lsdetector) {
+                    (*fs) << name << "{";
+                    (*fs) << "type" << "opencv-lsdetector";
+                    if (!cvd->lsdetector->empty()) {
+                        (*fs) << "data" << "{";
+                        fs->elname = "data";
+                        cvd->lsdetector->write(*fs);
                         (*fs) << "}";
                     }
                     (*fs) << "}";
